--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "20": "^3.1.9",
+    "@aws-amplify/auth": "^6.12.4",
+    "@aws-amplify/storage": "^6.8.4",
     "@aws-amplify/ui-react": "^6.11.2",
+    "@aws-sdk/client-s3": "^3.815.0",
+    "@aws-sdk/s3-request-presigner": "^3.815.0",
     "aws-amplify": "^6.14.4",
     "next": "^14.2.10",
     "react": "^18",
