--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/auth": "^6.12.4",
     "@aws-amplify/storage": "^6.8.4",
     "@aws-amplify/ui-react": "^6.11.2",
+    "@aws-amplify/ui-react-storage": "^3.10.3",
     "@aws-sdk/client-s3": "^3.815.0",
     "@aws-sdk/s3-request-presigner": "^3.815.0",
     "aws-amplify": "^6.14.4",
